@@ -14,6 +14,7 @@
  * Removed CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
  * Removed Distribution.getStandardMoment
  * Removed deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors
+ * Removed FunctionalChaosAlgorithm(Function) ctors
 
 === Documentation ===
 
